# menopause

./: .gitignore  Menopause_meeting_summary_2026-02-24.txt  PROJECT_HANDOFF.md  PROJECT_LOG.md  README.md  Summary_02282026.txt  pyproject.toml  summary-progress.md
GSE86244_data/: GSE86244_metadata.rds
GTExDatav10/: GTEx_Analysis_v10_Annotations_SampleAttributesDD.xlsx  GTEx_Analysis_v10_Annotations_SubjectPhenotypesDD.xlsx
R/: DE_sex_interaction_age_bins.R  DE_wider_age_groups.R  batch_correction_guide.R  check_batch_confound.R  check_institution_batch.R  compare_batch_correction.R  create_menopause_scoring_function.R  external_validation_GSE44000_postmenopausal_adipocytes_obese_vs_lean.R  kenichi_sns_panel_analysis.R  make_ppt_tables_2026-02-01.R  menopause_signature_scoring_gsva.R  menopause_signature_v1_improved_age_proxy.R  menopause_signature_v2_estrogen_filter.R  menopause_signature_v3_gse86244.R  menopause_signature_v4_literature.R  msigdb_proxy_scoring_gtex.R  msigdb_search_menopause_related_sets.R  next_steps_2026-02-01_adrenergic_modules.R  next_steps_2026-02-01_composition_markers.R  next_steps_2026-02-01_covariate_sensitivity.R  next_steps_2026-02-01_external_dataset_search_and_triage.R  next_steps_2026-02-01_signature_refinement.R  next_steps_2026-02-02_sex_age_trends_plots.R  next_steps_2026-02-02_sex_interaction_gene_set_scores.R  next_steps_2026-02-28_adrenergic_receptor_expression_heatmaps.R  next_steps_2026-02-28_cibersort_cell_fractions_adipose_reference_GSE176171.R  next_steps_2026-02-28_cibersort_debug_adipocyte_missing.R  next_steps_2026-02-28_cibersort_plot_from_fractions_with_meta.R  next_steps_2026-02-28_cibersort_reference_slide_and_clean_fraction_plots.R  next_steps_2026-02-28_cibersort_reference_vs_bulk_comparison_plot.R  next_steps_2026-02-28_glycolysis_hypoxia_oxphos_analysis.R  next_steps_2026-02-28_kenichi_panel_by_sex_slides7_8_style.R  (+11 more)
(+241 files in other folders)
